# chat

./: .gitignore  Cargo.toml  docker-compose.yml  nginx.conf
admin-panel/: Cargo.toml  Trunk.toml  index.html  login_style.css  telegram_style.css
admin-panel/src/: app.rs  main.rs
backend/: Cargo.toml  build.rs  schema.cql
backend/proto/: chat.proto
backend/scripts/: gen_certs.sh
backend/src/: contract.rs  db.rs  lib.rs  main.rs  sync.rs  websocket.rs
chat-widget/: Cargo.toml  Trunk.toml  index.html  widget.css
chat-widget/src/: main.rs  widget.rs
frontend-leptos/: Cargo.toml  index.html  telegram_style.css
frontend-leptos/src/: app.rs
shared/: Cargo.toml  build.rs
shared/proto/: chat.proto
shared/src/: lib.rs
