[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
turbochat-shared = { path = "../shared" }
bytes.workspace = true
prost.workspace = true
crc32c.workspace = true
scylla = "0.12"
axum = { version = "0.7", features = ["ws"] }
tokio = { workspace = true, features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors"] }
chrono = "0.4"

# Redis Pub/Sub
redis = { version = "0.24", features = ["aio", "tokio-comp"] }

# WebSocket
futures = "0.3"

[build-dependencies]
prost-build.workspace = true