[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
turbochat-shared = { path = "../shared" }
bytes.workspace = true
prost.workspace = true
crc32c.workspace = true
scylla = "0.12"
axum = { version = "0.7", features = ["ws"] }
tokio = { workspace = true, features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
# Redis Pub/Sub
redis = { version = "0.27", features = ["aio", "tokio-comp", "tokio-native-tls-comp"] }
# WebSocket
futures = "0.3"

[build-dependencies]
prost-build.workspace = true
