[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
turbochat-shared = { path = "../shared" }
bytes.workspace = true
prost.workspace = true
crc32c.workspace = true
scylla = "0.12"
axum = { version = "0.7", features = ["ws"] }
tokio = { workspace = true, features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
reqwest = { version = "0.11", features = ["json"] }

# Base64 mới (không deprecated)
base64 = "0.22"

# Redis MỚI với đầy đủ features cho Upstash TLS
redis = { version = "0.27", features = [
    "aio",
    "tokio-comp",
    "tokio-native-tls-comp"
] }

futures = "0.3"

[build-dependencies]
prost-build.workspace = true