[package]
name = "turbochat-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
turbochat-shared = { path = "../shared" }
leptos = { version = "0.7", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
gloo-net = "0.6"
prost = "0.13"
crc32c = "0.6"
js-sys = "0.3"

[profile.release]
opt-level = "z"
lto = true