[package]
name = "turbochat-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
prost.workspace = true
prost-types.workspace = true
bytes.workspace = true
crc32c.workspace = true
thiserror.workspace = true

# QUAN TRỌNG: Feature flag cho Wasm
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[build-dependencies]
prost-build.workspace = true
